--- a/app/assets/stylesheets/frumweb.scss
+++ b/app/assets/stylesheets/frumweb.scss
@@ -57,3 +57,21 @@ body {
     padding-top: 8px;
   }
 }
+
+
+#wedding-party {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.wedding-party{
+  margin: 10px 10px;
+}
+
+
+.avatar {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 7rem;
+}
