--- a/app/assets/stylesheets/frumweb.scss
+++ b/app/assets/stylesheets/frumweb.scss
@@ -49,13 +49,56 @@ body {
   justify-content: space-around;
   color: snow;
   background-color: #2a3439;
-  a {
+  #nav-p {
+    padding-top: 8px;
     color: snow;
     font-family: 'Pacifico';
   }
-  p {
-    padding-top: 8px;
+    :hover {
+      cursor: url('/paw.png'), auto;
+      text-decoration: underline;
+    }
+}
+
+#the-couple {
+  width: 60%;
+  height: auto;
+  margin: 40px auto;
+  display: block;
+}
+
+#lorem {
+  width: 60%;
+  font-family: 'sans-serif';
+  text-align: center;
+  margin: 0 auto;
+}
+
+#destination-div {
+  h1 {
+    font-family: 'Pacifico';
+    margin: 20px auto;
+    text-align: center;
+    font-size: 30px;
+    text-decoration: underline;
   }
+  h3, h4 {
+    font-family: 'Pacifico';
+    text-align: center;
+  }
+}
+
+#destination-pic {
+  width: 80%;
+  height: auto;
+  margin: 10px auto;
+  display: block;
+}
+#venue-pic {
+  width: 60%;
+  height: auto;
+  margin: 10px auto;
+  display: block;
 }
 
 
@@ -74,4 +117,12 @@ body {
   height: 7rem;
   width: 7rem;
   border-radius: 7rem;
+}
+
+
+#my-footer {
+  text-align: center;
+  background-color: #2a3439;
+  color: snow;
+  margin-top: 10px;
 }
