--- a/app/assets/stylesheets/frumweb.scss
+++ b/app/assets/stylesheets/frumweb.scss
@@ -7,8 +7,14 @@
   src: url('Pacifico/Pacifico.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: "Quicksand";
+  src: url('Quicksand/Quicksand.otf') format('truetype');
+}
+
 body {
   background-color: snow;
+  font-family: 'Quicksand';
 }
 
 #whole-header {
@@ -44,18 +50,22 @@ body {
   color: #2a3439;
 }
 
+.circle:before {
+  content: ' \25CF';
+  font-size: 16px;
+}
+
 #navigation-bar {
   display: flex;
   justify-content: space-around;
   color: snow;
   background-color: #2a3439;
-  #nav-p {
+  .nav-p {
     padding-top: 8px;
     color: snow;
-    font-family: 'Pacifico';
   }
     :hover {
-      cursor: url('/paw.png'), auto;
+      cursor: pointer;
       text-decoration: underline;
     }
 }
@@ -119,10 +129,56 @@ body {
   border-radius: 7rem;
 }
 
+#carousel {
+  width: 50%;
+  height: auto;
+  display: block;
+  margin: 100px auto;
+  img {
+    max-height: 500px;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+  background-image: none;
+}
+
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 55px;
+  color: #2a3439;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: #2a3439;
+}
+
+
+
+
 
 #my-footer {
   text-align: center;
   background-color: #2a3439;
   color: snow;
   margin-top: 10px;
+}
+
+.schedule-div {
+  display: flex;
+  flex-direction: column;
+  img {
+    width: 50%;
+    height: auto;
+  }
+}
+
+.pac {
+  font-family: 'Quicksand';
+  text-align: center;
 }
