--- a/app/assets/stylesheets/frumweb.scss
+++ b/app/assets/stylesheets/frumweb.scss
@@ -17,6 +17,11 @@ body {
   font-family: 'Quicksand';
 }
 
+
+.content {
+  margin-top: 30px;
+}
+
 #whole-header {
   height: 20rem;
 }
@@ -31,6 +36,7 @@ body {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid black;
+  height: 350px;
 }
 
 .middle {
@@ -68,6 +74,23 @@ body {
       cursor: pointer;
       text-decoration: underline;
     }
+}
+
+.navbar {
+  height: 3.4rem;
+}
+
+.navbar-fixed-top {
+  background-color: pink;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 50;
+  margin-bottom: 30px;
+}
+
+.navbar-top {
+  margin-bottom: 30px;
 }
 
 #the-couple {
@@ -111,6 +134,21 @@ body {
   display: block;
 }
 
+#activities {
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.activity {
+  margin: 20px;
+}
+
+.activity img {
+  width: 50rem;
+}
 
 #wedding-party {
   margin: 0 auto;
