--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta charset="utf-8" >
+    <%= favicon_link_tag asset_path('download.jpg') %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true%>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </head>
