--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,18 @@
 <html>
   <head>
     <title>Wedding</title>
+    <%= yield :meta %>
     <% vue_route = Rails.env == 'production' ? "lib/vuemin" : "lib/vue" %>
     <%= javascript_include_tag vue_route %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= favicon_link_tag asset_path('ring.png') %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true%>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag('https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js') %>
+    <%= javascript_include_tag('/bootstrap.min.js') %>
   </head>
   <body>
     <%= yield %>
