--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  *
  *= require bootstrap.min
  *= require frumweb.scss
+ *= require w3.css
  */
 
 /*# sourceMappingURL=application.css.css.map */
