--- a/app/assets/stylesheets/frumweb.scss
+++ b/app/assets/stylesheets/frumweb.scss
@@ -12,6 +12,10 @@
   src: url('Quicksand/Quicksand.otf') format('truetype');
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: snow;
   font-family: 'Quicksand';
@@ -22,11 +26,6 @@ body {
   margin-top: 30px;
 }
 
-#whole-header {
-  height: 20rem;
-}
-
-
 .icon {
   width: 3rem;
   height: 3rem;
@@ -34,9 +33,9 @@ body {
 
 #whole-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   border-bottom: 1px solid black;
-  height: 350px;
+  height: 20rem;
 }
 
 .middle {
@@ -61,11 +60,14 @@ body {
   font-size: 16px;
 }
 
-#navigation-bar {
+.exper-nav {
   display: flex;
   justify-content: space-around;
   color: snow;
   background-color: #2a3439;
+  width: 100%;
+  margin: 0;
+  height: 2.8rem;
   .nav-p {
     padding-top: 8px;
     color: snow;
@@ -76,17 +78,29 @@ body {
     }
 }
 
+.modal-p {
+  padding-top: 8px;
+  padding-left: 3rem;
+  color: snow;
+  &:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+}
+
+
+
 .navbar {
   height: 3.4rem;
 }
 
 .navbar-fixed-top {
-  background-color: pink;
+  background-color: #2a3439;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 50;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .navbar-top {
@@ -94,7 +108,7 @@ body {
 }
 
 #the-couple {
-  width: 60%;
+  width: 80%;
   height: auto;
   margin: 40px auto;
   display: block;
@@ -108,13 +122,7 @@ body {
 }
 
 #destination-div {
-  h1 {
-    font-family: 'Pacifico';
-    margin: 20px auto;
-    text-align: center;
-    font-size: 30px;
-    text-decoration: underline;
-  }
+  margin: 3rem auto 3rem auto;
   h3, h4 {
     font-family: 'Pacifico';
     text-align: center;
@@ -141,14 +149,14 @@ body {
   flex-direction: column;
   text-align: center;
   align-items: center;
+  justify-content: center;
 }
 
 .activity {
   margin: 20px;
-}
-
-.activity img {
-  width: 50rem;
+  h2, a {
+    margin-top: 20px auto;
+  }
 }
 
 #wedding-party {
@@ -170,7 +178,7 @@ body {
 }
 
 .card {
-  margin-bottom: 20px;
+  margin: 20px auto 20px auto;
 }
 
 .card-body {
@@ -184,26 +192,46 @@ body {
 }
 
 .large-card {
-  margin-top: 60px;
-  margin-bottom: 60px;
   margin: 20px auto;
   width: 60%;
 }
 
-#carousel {
+#carousel-div {
+  min-width: 70%;
+  margin-bottom: 10rem;
+}
+
+.carousel-inner {
+  width: 50rem;
+  height: 5;
+  background-color: black;
+  border-radius: 20px;
+}
+
+.carousel {
   width: 50%;
   height: auto;
-  display: block;
-  margin: 100px auto;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 20px auto;
   img {
-    max-height: 500px;
-    max-width: 500px;
-    margin: 0 auto;
+    height: 30rem;
+    width: 30rem;
   }
+}
+
+.around-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
   background-image: none;
+  color: rgba(122, 122, 122, .8);
 }
 
 .carousel-control-next-icon:after
@@ -235,14 +263,17 @@ body {
   }
 }
 
+
 .pac {
   font-family: 'Quicksand';
   text-align: center;
+  margin: 20px auto;
 }
 
 .title {
   font-family: 'Pacifico';
   text-align: center;
+  margin-bottom: 60px;
 }
 
 .event {
@@ -253,6 +284,7 @@ body {
   width: 90rem;
   height: 70rem;
   border: 20px solid black;
+  border-radius: 20px;
 }
 
 .registry{
@@ -272,4 +304,209 @@ body {
   max-height: 14rem;
   max-width: 50%;
   margin: 0 auto;
+}
+
+.registry p {
+  width: 50%;
+  margin: 20px auto 0 auto;
+  text-align: center;
+}
+
+.activity-category {
+  width: 60%;
+
+}
+
+.category-card {
+  width: 80%;
+  margin: 20px auto;
+  background-color: rgba(122, 122, 122, .3);
+}
+
+.activity {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 20px auto;
+  img {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
+
+.category-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card h1 {
+  text-align: center;
+}
+
+.arrow {
+  width: 2rem;
+  height: 2rem;
+  margin: 10px;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.activity-blank {
+  width: 2rem;
+  height: 2rem;
+}
+
+.avatar {
+  background-image: url('zach.png');
+  background-size: cover;
+}
+
+#zach {
+  background-image: url('zach.png');
+  background-size: cover;
+}
+
+#blaire {
+  background-image: url('blaire.png');
+  background-size: cover;
+}
+
+#david {
+  background-image: url('david.jpg');
+  background-size: cover;
+}
+
+.accomodation {
+  margin: 1rem auto 1rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.accomodation-link {
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.accomodation-img {
+  max-height: 14rem;
+  max-width: 50%;
+  margin: 1rem auto;
+}
+
+.accomodation-item {
+  margin: 1rem auto;
+  text-align: center;
+  max-width: 60%;
+}
+
+
+.couple-div {
+  text-align: center;
+  margin: 3rem auto 3rem auto;
+}
+
+.couple-item {
+  margin: 3rem auto 3rem auto;
+}
+
+#the-couple {
+  border-radius: 20px;
+}
+
+.disappear {
+  display: none;
+}
+
+.hamburger-nav {
+  display: flex;
+  height: 2.8rem;
+  color: snow;
+  background-color: #2a3439;
+  width: 100%;
+  align-items: center;
+    :hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
+}
+
+.modal-dialog {
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #2a3439;
+  color: snow;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.modal-content {
+  min-height: 99%;
+  background-color: #2a3439;
+}
+
+.carousel-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-carousel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20% auto;
+  width: 50%;
+  height: 3rem;
+  align-items: center;
+}
+
+#image-container {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-img {
+  max-width: 80%;
+  height: auto;
+  padding-bottom: 10%;
+  padding-top: 10%;
+  margin: 0 auto;
+}
+
+.side-arrow {
+  font-size: 3rem;
+  margin: 0 3rem;
+}
+
+.carousel-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+#wedding-party {
+  display: flex;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 600px) {
+  .activity-title {
+    font-size: 20px;
+  }
+  #wedding-party {
+    display: flex;
+    flex-direction: column;
+  }
 }
